src/web-server/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-12-web-server
  namespace: ns-12
  labels:
    app: app-12-web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-12-web-server
  template:
    metadata:
      labels:
        app: app-12-web-server
    spec:
      containers:
      - name: web-server
        image: flensimdotcore/dcs-2025-2nd-achievement-web-server:latest
        ports:
        - containerPort: 5000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: app-12-web-server
  namespace: ns-12
spec:
  selector:
    app: app-12-web-server
  ports:
  - port: 6000
    targetPort: 5000
    name: http
  type: ClusterIP
